--- a/downloads/index.html.haml
+++ b/downloads/index.html.haml
@@ -43,7 +43,7 @@ title: Downloads
       %td #{site.current_narayana_release.date}
       %td LGPL
 
-%a{:href => "/downloads/narayana-other"}
+%a{:href => relative("/downloads-other/index.html")}
   Legacy Narayana versions
 
 
