--- a/index.html.haml
+++ b/index.html.haml
@@ -11,7 +11,7 @@ title: Narayana Homepage
         Great news! Today we released the latest version of our transaction software!
       %p
         Download it now from:
-        %a{ :href=>"/downloads" } #{site.base_url}/downloads
+        %a{:href => relative("/downloads/index.html")} #{site.base_url}/downloads
       %p{:style=>'font-size: 10px; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;'}
         by narayana at #{site.current_narayana_release.date}
 
@@ -73,7 +73,7 @@ title: Narayana Homepage
             Professional Support
           %td.def
             Red Hat delivers the Professional Support, Consulting, and Training that you need whether you are testing a proof of concept, deploying a mission-critical application, or rolling out across your entire enterprise.
-            
+
 .row
   .col-md-12
     %h3 What is Narayana?
@@ -94,8 +94,8 @@ title: Narayana Homepage
         XATMI/TX
     %p
       %em.Although Narayana is shipped as part of the WildFly application server, it continues to be developed as a stand-alone transaction manager. Narayana provides everything you need to develop transactional applications running over your own transport protocols and can be embedded in a range of containers.
-      
-      %img{:src => "/images/narayana-architecture-diagram.jpg", :class => "img-responsive"}
+
+      %img{:src => relative("/images/narayana-architecture-diagram.jpg"), :class => "img-responsive"}
 
 -# .row
 -#   = partial( 'latest-news.html.haml', {"real_page" => page} )
