--- a/_layouts/project.html.haml
+++ b/_layouts/project.html.haml
@@ -1,7 +1,65 @@
 !!! 5
 %html(lang="en")
   %head
-    = partial( page.head_partial.nil? ? 'head.html.haml' : page.head_partial , { "real_page" => page } )
+    %title #{page.title ? page.title : page.simple_name.capitalize } · #{site.title}
+    %meta(charset="utf-8")
+    %meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    %meta(name="description" content="#{page.description}")
+    %meta(name="author" content="#{page.author}")
+
+    - pageStyle = page.style ;
+
+    %link(href="#{pageStyle ? site[pageStyle].bootstrap_css_url : site.bootstrap_css_url}#{site.minified}.css" rel="stylesheet" media="screen")
+    %link{:href => relative("/css/styles.css"), :rel => "stylesheet", :media => "screen"}
+
+
+    / IE 6-8 support of HTML 5 elements
+    /[if lt IE 9]
+      %script(src="#{site.jborg_js_url}/libs/html5/pre3.6/html5.min.js")
+
+    %link(rel="icon" href="#{relative(site.project_images_url)}/favicon.png" type="image/png")
+    %link(rel="apple-touch-icon-precomposed" sizes="144x144" href="#{relative(site.project_images_url)}/apple-touch-icon-144x144-precomposed.png")
+    %link(rel="apple-touch-icon-precomposed" sizes="114x114" href="#{relative(site.project_images_url)}/apple-touch-icon-114x114-precomposed.png")
+    %link(rel="apple-touch-icon-precomposed" sizes="72x72" href="#{relative(site.project_images_url)}/apple-touch-icon-72x72-precomposed.png")
+    %link(rel="apple-touch-icon-precomposed" href="#{relative(site.project_images_url)}/apple-touch-icon-precomposed.png")
+
+    / Defines the project banner. Change these URLs to your specific project folder on static.jboss.org
+    :css
+      @media (min-width: 980px) {
+        .banner { background-image: url(#{relative(site.project_images_url)}/#{site.project}-banner-1180px.png); height: 110px;  }
+      }
+      @media (max-width: 979px) {
+        .banner { background-image: url(#{relative(site.project_images_url)}/#{site.project}-logo.png); background-repeat:no-repeat; height: 60px; }
+      }
+      @media (max-width: 650px) {
+        .banner { width: 100%; margin: 0px auto; }
+      }
+      @media (max-width: 450px) {
+        .banner { height: 90px; }
+      }
+
+    %script(src="#{site.jborg_js_url}/libs/jquery/jquery-1.9.1#{site.minified}.js")
+    - if page.javascripts
+      - page.javascripts.each do |javascript|
+        %script{:src=>javascript, :type=>'text/javascript'}
+
+    :css
+      /* adjusting the vertical spacing for when a stickynav is engaged */
+      .breadcrumb-fixed > .active {
+        color: #8c8f91;
+      }
+      .breadcrumb-fixed {
+        margin: 70px 0 10px;
+        padding: 8px 15px;
+        margin-bottom: 20px;
+        list-style: none;
+        background-color: #f5f5f5;
+        border-radius: 4px;
+      }
+
+      .breadcrumb-fixed > li {
+        display: inline-block;
+      }
   %body
     %div{:id => "#{page.subproject ? 'subproject' : ''}"}
       / begin accesibility skip to top
@@ -20,11 +78,75 @@
 
         = partial( page.banner_partial.nil? ? 'banner.html.haml' : page.banner_partial , { "real_page" => page } )
 
-        = partial( page.nav_partial.nil? ? 'nav.html.haml' : page.nav_partial , { "real_page" => page } )
+        / Navigation
+        .navbar.navbar-inverse.navbar-fix#sticky-navbar
+          .container-fluid
+            .collapse.navbar-collapse#navbar-1
+              %ul.nav.navbar-nav
+                %li{:class => page.output_path.eql?("/index.html") ? "active" : ""}
+                  %a{:href => relative("/index.html")} Home
+                %li{:class => page.output_path.start_with?("/downloads") ? "active": ""}
+                  %a{:href => relative("/downloads/index.html")} Downloads
+                %li{:class => page.output_path.start_with?("/documentation") ? "active": ""}
+                  %a{:href => relative("/documentation/index.html")} Documentation
+                %li{:class => page.output_path.start_with?("/community") ? "active": ""}
+                  %a{:href => relative("/community/index.html")} Community
+                %li.dropdown
+                  %a.dropdown-toggle(href="#" data-toggle="dropdown")
+                    = precede 'Source Code ' do
+                      %b.caret
+                  %ul.dropdown-menu
+                    %li
+                      %a(href="https://github.com/jbosstm") GitHub
+                    %li
+                      %a(href="https://source.jboss.org/browse/narayana") FishEye
+                %li
+                  %a(href="https://issues.jboss.org/browse/JBTM") Issue Tracker
 
         ~ content
 
-      = partial( page.projectfooter_partial.nil? ? 'projectfooter.html.haml' : page.projectfooter_partial , { "real_page" => page } )
+      / Project footer
+      %footer.container
+        .row
+          .col-md-2.col-md-offset-1
+            %h4 Navigate
+            %ul.list-unstyled
+              %li
+                %a{:href => relative("/documentation/index.html"), :title => "Learn"} Learn
+              %li
+                %a{:href => "https://github.com/jbosstm/quickstart", :title => "Get Started"} Get Started
+              %li
+                %a{:href => "https://developer.jboss.org/en/jbosstm/?view=discussions", :title => "Forums"} Forums
+              %li
+                %a{:href => relative("/downloads/index.html"), :title => "Download"} Download
+          .col-md-2
+            %h4 Follow Us
+            %ul.list-unstyled
+              %li
+                %a{:href => "http://jbossts.blogspot.co.uk/", :title => "Blog"} Blog
+              %li
+                %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-announce", :title => "Announce Mailing List"} Announce Mailing List
+              %li
+                %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-users", :title => "Users Mailing List"} Users Mailing List
+              %li
+                %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-commits", :title => "Commits Mailing List"} Commits Mailing List
+              %li
+                %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-dev", :title => "Developers Mailing List"} Developers Mailing List
+              %li
+                %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-issues", :title => "Issues Mailing List"} Issues Mailing List
+          .col-md-2
+            %h4 Contribute
+            %ul.list-unstyled
+              %li
+                %a{:href => "https://issues.jboss.org/browse/JBTM/", :title => "Submit a bug"} Submit a bug
+              %li
+                %a{:href => "https://github.com/jbosstm", :title => "Write code"} Write Code
+              %li
+                %a{:href => relative("/governance/index.html"), :title => "Governance"} Governance
+          .col-md-3.col-md-offset-1
+            %h4 LGPL 2.1 License
+            %p All dependencies of this project are available under the LGPL or a compatible license.
+
 
       = partial( page.companyfooter_partial.nil? ? 'companyfooter.html.haml' : page.companyfooter_partial , { "real_page" => page } )
 
@@ -87,4 +209,4 @@
 
       <!-- Google Analytics -->
       - if site.profile.eql?("staging") or site.profile.eql?("production")
-        %script{:src=>"js/analytics.js", :type=>"text/javascript"}
+        %script{:src => relative("/js/analytics.js"), :type=>"text/javascript"}
