Updated the links to the documents

--- a/transaction-fundamentals/index.html.haml
+++ b/transaction-fundamentals/index.html.haml
@@ -9,21 +9,21 @@ title:  Transaction Fundamentals
   This page contains references to a selection of papers around the fundamentals of transaction processing.
 %p
   %b
-    %a{:href => "http://narayana.jboss.org/dms/jbosstm/resources/reports/DistributedTransactions.pdf"}
+    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/reports/DistributedTransactions.pdf"}
       Why do you need (distributed) transactions?
   An overview of the things you should consider when deciding if you need transaction management in your architecture.
 %p
   %b
-    %a{:href => "http://narayana.jboss.org/dms/jbosstm/resources/reports/End-to-endtransactions.pdf"}
+    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/reports/End-to-endtransactions.pdf"}
       What are end-to-end transactions and can JBossTS support them?
   An abridged version of this paper was published in the Java Developers Journal, 2001.
 %p
   %b
-    %a{:href => "http://narayana.jboss.org/dms/jbosstm/resources/papers/HPTS2001.pdf"}
+    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/papers/HPTS2001.pdf"}
       A framework for implementing extended transactions.
   A paper on the OMG's Extended Transaction framework, for the High Performance Transaction Systems Workshop, 2001.
 %p
   %b
-    %a{:href => "http://narayana.jboss.org/dms/jbosstm/resources/papers/HPTS2003.pdf"}
+    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/papers/HPTS2003.pdf"}
       Full circle for Web services transactions?
   A paper on the evolution of Web Services , for the High Performance Transaction Systems Workshop, 2003.
