Broken Meet the team link

--- a/_partials/rightcol.html.haml
+++ b/_partials/rightcol.html.haml
@@ -18,7 +18,7 @@
         %i.icon-fixed-width.icon-arrow-right
         Run our quickstarts
     %li
-      %a{:href => href="http://www.jboss.org:80/narayana/team.html"}
+      %a{:href => href="http://narayana.io/community/index.html"}
         %i.icon-fixed-width.icon-arrow-right
         Meet the team
     %li
