--- a/index.html.haml
+++ b/index.html.haml
@@ -25,7 +25,7 @@ title: Narayana Homepage
   .col-md-12
     %h2 Why choose Narayana?
     %p
-      In todays business environment data corruption can have serious consequences for the enterprise including service unavailability, system reconciliation costs, and damage to customer relationships and business reputation. The Narayana transaction suite protects businesses from data corruption by guaranteeing complete, accurate business transactions for Java based applications (including those written for the JEE and EJB frameworks) thereby eliminating the risks and costs associated with time-consuming manual reconciliation following failures.
+      In todays business environment data corruption can have serious consequences for the enterprise including service unavailability, system reconciliation costs, and damage to customer relationships and business reputation. The Narayana transaction suite protects businesses from data corruption by guaranteeing complete, accurate business transactions for Java based applications (including those written for the Java EE and EJB frameworks) thereby eliminating the risks and costs associated with time-consuming manual reconciliation following failures.
     %table.deftable
       %tbody
         %tr
@@ -67,7 +67,7 @@ title: Narayana Homepage
           %td.term
             Industry Leading Interoperability
           %td.def
-            Extends beyond JEE to Web Services and REST through support of the WS-Coordination, WS-AtomicTransaction, WS-BusinessActivity and REST-AT specifications.
+            Extends beyond Java EE to Web Services and REST through support of the WS-Coordination, WS-AtomicTransaction, WS-BusinessActivity and REST-AT specifications.
         %tr
           %td.term
             Professional Support
