Change JEE to Java EE.
No such thing as JEE.

--- a/sub-projects/index.html.haml
+++ b/sub-projects/index.html.haml
@@ -9,7 +9,7 @@ title: Sub Projects
 %h2
   BlackTie - Connecting service-oriented C/C++ with enterprise Java
 %p
-  Bridging the gap between JEE and XATMI, Blacktie provides the tools to allow existing XATMI application programs written in C/C++ to integrate seamlessly into the JBoss stack allowing these applications to migrate easily to the best-of-breed, industry proven, services provided by the JBoss application server stack. As well as providing C++ APIs to support the X/Open XATMI specification, Blacktie also provides the JAtmiBroker API to support clients and services written in Java.
+  Bridging the gap between Java EE and XATMI, Blacktie provides the tools to allow existing XATMI application programs written in C/C++ to integrate seamlessly into the JBoss stack allowing these applications to migrate easily to the best-of-breed, industry proven, services provided by the JBoss application server stack. As well as providing C++ APIs to support the X/Open XATMI specification, Blacktie also provides the JAtmiBroker API to support clients and services written in Java.
 %p
   Blacktie provides those features present in even the most established XATMI providers. Leveraging the facilities provided by the market leading JBoss application server, Blacktie is able to provide a reliable, high-performance core framework which application programs can then use to produce premium grade business services.
 
