Change JEE to Java EE.
Because there's no such thing as JEE.

--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -85,7 +85,7 @@ title: Community
     %h2
       Michael Musgrove
     %p
-      Michael Musgrove is a developer with 20+ years experience building distributed systems using CORBA, JEE and OSI. He currently works in the transactions team at Red Hat, Inc implementing Java and C++ solutions for the middleware market.
+      Michael Musgrove is a developer with 20+ years experience building distributed systems using CORBA, Java EE and OSI. He currently works in the transactions team at Red Hat, Inc implementing Java and C++ solutions for the middleware market.
     %p
       Prior to his role at Red Hat Michael was involved with a variety of technologies including software and hardware fault tolerance, management of distributed systems and systems management products for servers.
     %p
