--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -51,10 +51,8 @@ title: Community
   .col-md-6
     %h2
       Mark Little
-    %h3
-      Development Manager
     %p
-      I work for Red Hat, where I lead JBoss technical direction and research/development. Prior to this I was SOA Technical Development Manager and Director of Standards. I was Chief Architect and co-founder at Arjuna Technologies, an HP spin-off (where I was a Distinguished Engineer). I've been working in the area of reliable distributed systems since the mid-80's. My PhD was on fault-tolerant distributed systems, replication and transactions. I'm also a Professor at Newcastle University.
+      I work for Red Hat, where I lead JBoss technical direction and research/development. Prior to this I was SOA Technical Development Manager and Director of Standards. I was Chief Architect and co-founder at Arjuna Technologies, an HP spin-off (where I was a Distinguished Engineer). I've been working in the area of reliable distributed systems since the mid-80's. My PhD was on fault-tolerant distributed systems, replication and transactions. I'm also a Professor at Newcastle University and Lyon.
     .div{:style => "height: 250px"}
       %a{:class => "twitter-timeline", :href => "https://twitter.com/nmcl", :"data-widget-id" => "532496403956649984", :height => "250"}
   .col-md-6
