--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -21,6 +21,7 @@ title: Community
       IRC channel on
       %a{:href => "http://freenode.net"}
         Freenode.
+      Please ping one of the dev team (username mention or PM) for attention such as tomjenkinson, mmusgrov, zhfeng, ochaloup.
     %a{:href => "http://webchat.freenode.net/?channels=jbossts", :class => "btn btn-primary"}
       Chat With Us
   .col-md-4
