Updated team line-up

--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -69,19 +69,6 @@ title: Community
 .row
   .col-md-6
     %h2
-      Paul Robinson
-    %h3
-      XTS Lead
-    %p
-      Dr Paul Robinson is a Senior Software Engineer at JBoss by Red Hat where he currently leads the Web Service Transactions.
-    %p
-      Paul has worked in the field of transactions and Java middleware for over 10 years. His experience began at Hewlett Packard where he was a member of the Transactions Team. Here he contributed to the first Web service transactions implementation. Previously, Paul headed up the consultancy arm of Arjuna Technologies, helping high-profile customers deploy JBoss Transactions, JBossWS and also Arjuna's Cloud Computing product.
-    %p
-      Paul received a PhD in middleware and non-repudiation from the University of Newcastle upon Tyne, where he now holds the role of Visiting Research Fellow. In this role he teaches Transactions and Java EE to Advanced-Masters students.
-    .div{:style => "height: 250px"}
-      %a{:class => "twitter-timeline", :href => "https://twitter.com/Pfrobinson", :"data-widget-id" => "532499915792842752", :height => "250"}
-  .col-md-6
-    %h2
       Michael Musgrove
     %p
       Michael Musgrove is a developer with 20+ years experience building distributed systems using CORBA, Java EE and OSI. He currently works in the transactions team at Red Hat, Inc implementing Java and C++ solutions for the middleware market.
@@ -89,12 +76,6 @@ title: Community
       Prior to his role at Red Hat Michael was involved with a variety of technologies including software and hardware fault tolerance, management of distributed systems and systems management products for servers.
     %p
       His latest interests include how to apply these experiences in a REST setting.
-.row
-  .col-md-6
-    %h2
-      Gytis Trikleris
-    .div{:style => "height: 250px"}
-      %a{:class => "twitter-timeline", :href => "https://twitter.com/blacktie_china", :"data-widget-id" => "532499915792842752", :height => "250"}
   .col-md-6
     %h2
       Amos Feng
@@ -108,6 +89,8 @@ title: Community
       Other contributors:
     %ul
       %li Jonathan Halliday
+      %li Gytis Trikleris
+      %li Paul Robinson
       %li Andrew Dinn
       %li Kevin Conner.
       %li Richard Ackmatowicz.
