Adding Ondra's bio

--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -83,6 +83,16 @@ title: Community
       我在Redhat工作，参与Narayana项目的开发
     .div{:style => "height: 250px"}
       %a{:class => "twitter-timeline", :href => "https://twitter.com/blacktie_china", :"data-widget-id" => "532503585267777536", :height => "250"}
+
+.row
+  .col-md-6
+    %h2
+      Ondra Chaloupka
+    %p
+      I joined the team with 5 years experience of QE engineer for JBoss EAP.
+    %p
+      Prior to work at Red Hat I gained experience in PHP web and Java EE logistic system development.
+
 .row
   .col-md-6
     %h2
