Updated with latest link for JProfiler

--- a/_partials/rightcol.html.haml
+++ b/_partials/rightcol.html.haml
@@ -94,8 +94,8 @@
         %img{:alt => "Red Hat", :src=>"http://static.jboss.org/theme/images/common/redhat_logo.png"}/
       %p Red Hat employs the majority of contributors and provides all project infrastructure.
     %li
-      %a{:href => "http://www.ej-technologies.com/"}
-        %img{:alt => "EJ-Technologies", :src => "http://static.jboss.org/common/images/sponsors/ejtechnologies-color.png", :class => "img-responsive"}/
+      %a{:href => "https://www.ej-technologies.com/products/jprofiler/overview.html"}
+        %img{:alt => "EJ-Technologies", :src => "https://www.ej-technologies.com/images/product_banners/jprofiler_large.png", :class => "img-responsive"}/
       %p EJ-Technologies has kindly provided free JProfiler licenses.
     %li{:style => "border: none;"}
       %a{:href => "http://www.jetbrains.com/"}
