Moved from the old Magnolia system

--- a/architecture/index.html.haml
+++ b/architecture/index.html.haml
@@ -64,21 +64,21 @@ title:  Narayana Architecture
 %h2
   Published papers
 %p
-  %a{:href => "http://www.jboss.org/dms/jbosstm/resources/papers/ArjunaWeiss.pdf"}
+  %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/papers/ArjunaWeiss.pdf"}
     A description of the evolution of Arjuna from academic project to commercial product.
   A version of this was published in the USENIX Workshop on Industrial Experiences with Systems Software, Boston, MA, USA, 8 December 2002.
 %p
-  %a{:href => "http://www.jboss.org/dms/jbosstm/resources/papers/HPTS2005.pdf"}
+  %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/papers/HPTS2005.pdf"}
     The evolution of a transaction processing system.
   Presented at the High Performance Transaction Systems workshop, 2005.
 
 %h2
   Architecture documents
 %p
-  %a{:href =>"http://www.jboss.org/dms/jbosstm/resources/reports/Architecture-of-ArjunaCore.pdf"}
+  %a{:href =>"http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/reports/Architecture-of-ArjunaCore.pdf"}
     The architecture of ArjunaCore.
   Hewlett-Packard, 2001.
 %p
-  %a{:href => "http://www.jboss.org/dms/jbosstm/resources/reports/OTS_1-2/OTS_1.2.pdf"}
+  %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/reports/OTS_1.2.pdf"}
     Differences between OTS 1.1 and OTS 1.2.
   Hewlett-Packard, 2001.
