--- a/presentations/index.html.haml
+++ b/presentations/index.html.haml
@@ -11,22 +11,22 @@ title:  Narayana Presentations
 %h2
 %p
   %b
-    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/presentations/JBossTSwebinar.pdf"}
+    %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/presentations/JBossTSwebinar.pdf"}
       A webinar on JBoss Transactions 4.2.
 %p
   %b
-    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/presentations/XARecoveryIn3_2.pdf"}
+    %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/presentations/XARecoveryIn3_2.pdf"}
       XA recovery in ATS 3.2.
 %p
   %b
-    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/presentations/XTSOverview.pdf"}
+    %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/presentations/XTSOverview.pdf"}
       An overview of the 1.0 release of the Web Services Transactions component..
 
 %h2
   Standards Related
 %p
   %b
-    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/presentations/OASISForum2007.pdf"}
+    %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/presentations/OASISForum2007.pdf"}
       OASIS WS-TX overview.
   by Mark Little, October 29th 2007, OASIS Forum, London.
 
@@ -34,51 +34,51 @@ title:  Narayana Presentations
   General Presentations
 %p
   %b
-    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/presentations/DOA2007KeyNote.pdf"}
+    %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/presentations/DOA2007KeyNote.pdf"}
       Transaction Processing in a Service Oriented Architecture.
   by Mark Little, November 26th 2007. Key note at DOA 2007.
 %p
   %b
-    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/presentations/YRSOC07.pdf"}
+    %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/presentations/YRSOC07.pdf"}
       Research areas in transactions.
   by Mark Little, June 11th 2007. Key note at YRSOC07.
 %p
   %b
-    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/presentations/ArjunaReplication.pdf"}
+    %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/presentations/ArjunaReplication.pdf"}
       Integrating replication with transactions.
   by Mark Little, circa 1991. None of this exists in the current system, but may be of historic interest.
 %p
   %b
-    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/presentations/Middleware2001.pdf"}
+    %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/presentations/Middleware2001.pdf"}
       Describing the work done with IBM on developing an extended transaction framework in the OMG.
   by Mark Little et al, Middleware 2001 conference.
 %p
   %b
-    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/presentations/WIESS.pdf"}
+    %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/presentations/WIESS.pdf"}
       A description of the evolution of JBossTS from academic project to commercial product.
   Presented at the USENIX Workshop on Industrial Experiences with Systems Software, Boston, MA, USA, 8 December 2002.
 %p
   %b
-    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/presentations/EvolutionofArjuna.pdf"}
+    %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/presentations/EvolutionofArjuna.pdf"}
       An updated evolution of JBossTS presentation.
   Presented at the High Performance Transaction Systems workshop, Asilomar, September 2005.
 %p
   %b
-    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/presentations/OMG-Web-Services-Workshop.pdf"}
+    %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/presentations/OMG-Web-Services-Workshop.pdf"}
       The Development of Web Transactions.
   Presented at the OMG workshop on Web Services, 2001.
 %p
   %b
-    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/presentations/XML2003.pdf"}
+    %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/presentations/XML2003.pdf"}
       Web Services Transactions: Past, Present and Future.
   Presented at the XML 2003 conference, Philadelphia, 2003.
 %p
   %b
-    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/presentations/SIGMOD2004.pdf"}
+    %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/presentations/SIGMOD2004.pdf"}
       A review of all proposed transaction specifications for Web Services.
   An invited talk at SIGMOD 2004 in Paris.
 %p
   %b
-    %a{:href => "http://www.jboss.org/dms/jbosstm/resources/presentations/ActivityService.pdf"}
+    %a{:href => "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/presentations/ActivityService.pdf"}
       Activity Service Overview.
   Presented at a Bluestone offsite, Paris, 2000. Slide 3 requires some explanation: when the specification came up for adoption, both myself and my friend/colleague from IBM, Iain Houston, had to present it to the OMG Architecture Board; the hats were mandatory. To Iain's right is Andrew Watson, VP and Technical Director of the OMG, whom I've known since his days at the pioneering ANSA project. He had a hand in the hat construction!
