Moved architecture jpg to png

--- a/architecture/index.html.haml
+++ b/architecture/index.html.haml
@@ -18,7 +18,7 @@ title:  Narayana Architecture
   An overview of the architecture of JBoss Transactions.
 %p
   As can be seen below, JBoss Transactions is made up of a number of different modules.
-%img{:src => relative("/images/narayana-architecture-diagram.jpg"), :class => "img-responsive"}
+%img{:src => relative("/images/narayana-architecture-diagram.png"), :class => "img-responsive"}
 %ul
   %li
     %p
