--- a/index.html.haml
+++ b/index.html.haml
@@ -95,7 +95,7 @@ title: Narayana Homepage
     %p
       %em.Although Narayana is shipped as part of the WildFly application server, it continues to be developed as a stand-alone transaction manager. Narayana provides everything you need to develop transactional applications running over your own transport protocols and can be embedded in a range of containers.
 
-      %img{:src => relative("/images/narayana-architecture-diagram.jpg"), :class => "img-responsive"}
+      %img{:src => relative("/images/narayana-architecture-diagram.png"), :class => "img-responsive"}
 
 -# .row
 -#   = partial( 'latest-news.html.haml', {"real_page" => page} )
