Adding twitter link with narayanaio hashtag and timeline for ochaloup

--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -31,8 +31,9 @@ title: Community
       All the latest Narayana project news and other interesting stuff is published in our blog.
     %a{:href => "http://jbossts.blogspot.co.uk", :class => "btn btn-primary"}
       Visit Narayana Blog
+
 .row
-  .col-md-12
+  .col-md-8
     %h1
       Mailing Lists
     %p
@@ -47,6 +48,14 @@ title: Community
             The archive is available at
             %a{:href => "http://lists.jboss.org/pipermail/jbossts-announce/"}
               http://lists.jboss.org/pipermail/jbossts-announce/
+  .col-md-4
+    %h1
+      Twitter
+    %p
+      We use hashtag #narayanaio
+    %a{:href => "https://twitter.com/hashtag/narayanaio", :class => "btn btn-primary"}
+      Twitter #narayanaio
+
 .row
   %h1 Our team
   .col-md-6
@@ -92,6 +101,8 @@ title: Community
       I joined the team with 5 years experience of QE engineer for JBoss EAP.
     %p
       Prior to work at Red Hat I gained experience in PHP web and Java EE logistic system development.
+    .div{:style => "height: 250px"}
+      %a{:class => "twitter-timeline", :href => "https://twitter.com/_chalda", :height => "250"}
 
 .row
   .col-md-6
