--- a/_layouts/project.html.haml
+++ b/_layouts/project.html.haml
@@ -158,6 +158,8 @@
         - page.bottom_javascripts.each do |javascript|
           %script{:src=>javascript, :type=>'text/javascript'}
 
+      %script(src="https://cdnjs.cloudflare.com/ajax/libs/FeedEk/3.0.0/js/FeedEk.min.js")
+
       <!-- Google Analytics -->
       - if site.profile.eql?("staging") or site.profile.eql?("production")
         %script{:src => relative("/js/analytics.js"), :type=>"text/javascript"}
