Added data out our twitter account

--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -48,14 +48,24 @@ title: Community
             The archive is available at
             %a{:href => "http://lists.jboss.org/pipermail/jbossts-announce/"}
               http://lists.jboss.org/pipermail/jbossts-announce/
-  .col-md-4
+.row
+  %h1 Social
+  .col-md-6
     %h1
       Twitter
     %p
       We use hashtag #narayanaio
     %a{:href => "https://twitter.com/hashtag/narayanaio", :class => "btn btn-primary"}
       Twitter #narayanaio
-
+    .col-md-6
+    %h2
+      Narayana_IO
+    %h3
+      Follow us!
+    %p
+      You can also follow our Narayana twitter account for our latest announcements
+    .div{:style => "height: 250px"}
+      %a{:class => "twitter-timeline", :href => "https://twitter.com/narayana_io", :height => "250"}
 .row
   %h1 Our team
   .col-md-6
