updated to https

--- a/_layouts/project.html.haml
+++ b/_layouts/project.html.haml
@@ -123,7 +123,7 @@
             %h4 Follow Us
             %ul.list-unstyled
               %li
-                %a{:href => "http://jbossts.blogspot.co.uk/", :title => "Blog"} Blog
+                %a{:href => "https://jbossts.blogspot.co.uk/", :title => "Blog"} Blog
               %li
                 %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-announce", :title => "Announce Mailing List"} Announce Mailing List
               %li
