--- a/_partials/rightcol.html.haml
+++ b/_partials/rightcol.html.haml
@@ -2,7 +2,7 @@
   %h2 Getting Started
   %ul.nav.nav-pills.nav-stacked
     %li
-      %a{:href => href="http://www.jboss.org:80/narayana/downloads/latest.html"}
+      %a{:href => href="https://www.jboss.org:80/narayana/downloads/latest.html"}
         %i.icon-fixed-width.icon-arrow-right
         Download the latest version of Narayana standalone
     %li
@@ -10,15 +10,15 @@
         %i.icon-fixed-width.icon-arrow-right
         Or download the latest version of Narayana + WildFly
     %li
-      %a{:href => href="http://www.jboss.org:80/narayana/documentation/latest.html"}
+      %a{:href => href="https://www.jboss.org:80/narayana/documentation/latest.html"}
         %i.icon-fixed-width.icon-arrow-right
         Read our getting started documentation
     %li
-      %a{:href => href="http://github.com/jbosstm/quickstart"}
+      %a{:href => href="https://github.com/jbosstm/quickstart"}
         %i.icon-fixed-width.icon-arrow-right
         Run our quickstarts
     %li
-      %a{:href => href="http://narayana.io/community/index.html"}
+      %a{:href => href="https://narayana.io/community/index.html"}
         %i.icon-fixed-width.icon-arrow-right
         Meet the team
     %li
@@ -48,7 +48,7 @@
     :javascript
       $(document).ready(function () {
         $('#blogDiv').FeedEk({
-          FeedUrl: 'http://jbossts.blogspot.com/feeds/posts/default',
+          FeedUrl: 'https://jbossts.blogspot.com/feeds/posts/default',
           MaxCount: 2,
           ShowDesc: false,
           CharacterLimit: 200
@@ -64,25 +64,25 @@
       %li.pull-left
         %div{:style=>'width: 5px;height: 5px;'}
       %li.license-lgpl
-        %a{:href => "http://www.gnu.org/licenses/lgpl-2.1.html"}
+        %a{:href => "https://www.gnu.org/licenses/lgpl-2.1.html"}
           %em GNU Lesser General Public License, Version 2.1
       %li.jsr
-        %a{:href => "http://jcp.org/en/jsr/detail?id=342"}
+        %a{:href => "https://jcp.org/en/jsr/detail?id=342"}
           %span.implements JSR
           %br
           %span.version 907
       %li.arquillian
-        %a{:href => "http://www.jboss.org/arquillian"} Tested with Arquillian
+        %a{:href => "https://www.jboss.org/arquillian"} Tested with Arquillian
     %div{:style => "clear: both; height:1px;"}
 
 %div#coolstuff
   %div{:style => "margin-top: 2px; margin-bottom: 15px; margin-right: 10px; text-align: center;"}
     %div{:style => "display: inline-block"}
-      %a{:href => "http://design.jboss.org/coolstuff/wallpaper-narayana.html"}> Desktop Wallpaper
+      %a{:href => "https://design.jboss.org/coolstuff/wallpaper-narayana.html"}> Desktop Wallpaper
     &nbsp;|&nbsp;
     %div{:style => "display: inline-block"}
-      %a{:href => "http://www.cafepress.com/jbossorg/7793745"} Project Swag
-  %a{:href => "http://design.jboss.org/coolstuff/wallpaper-narayana.html"}
+      %a{:href => "https://www.cafepress.com/jbossorg/7793745"} Project Swag
+  %a{:href => "https://design.jboss.org/coolstuff/wallpaper-narayana.html"}
     %img{:alt => "Cool Stuff", :height => "110", :src => "/images/cool-stuff.png", :style => "margin:0 auto;", :width => "225", :class => "img-responsive"}/
 
 
@@ -90,22 +90,22 @@
   %h3 Sponsors
   %ul
     %li
-      %a{:href => "http://www.redhat.com"}
-        %img{:alt => "Red Hat", :src=>"http://static.jboss.org/theme/images/common/redhat_logo.png"}/
+      %a{:href => "https://www.redhat.com"}
+        %img{:alt => "Red Hat", :src=>"https://static.jboss.org/theme/images/common/redhat_logo.png"}/
       %p Red Hat employs the majority of contributors and provides all project infrastructure.
     %li
       %a{:href => "https://www.ej-technologies.com/products/jprofiler/overview.html"}
         %img{:alt => "EJ-Technologies", :src => "https://www.ej-technologies.com/images/product_banners/jprofiler_large.png", :class => "img-responsive"}/
       %p EJ-Technologies has kindly provided free JProfiler licenses.
     %li{:style => "border: none;"}
-      %a{:href => "http://www.jetbrains.com/"}
-        %img{:alt => "JetBrains", :src => "http://static.jboss.org/common/images/sponsors/intellij-color.png", :class => "img-responsive"}/
+      %a{:href => "https://www.jetbrains.com/"}
+        %img{:alt => "JetBrains", :src => "https://static.jboss.org/common/images/sponsors/intellij-color.png", :class => "img-responsive"}/
       %p JetBrains has kindly donated an open source IntelliJ license.
     %li{:style => "border: none;"}
-      %a{:href => "http://www.oxygenxml.com/"}
+      %a{:href => "https://www.oxygenxml.com/"}
         %img{:alt => "Oxygen", :src => "/images/oxygen.png", :class => "img-responsive"}/
       %p JetBrains has kindly donated an open source IntelliJ license.
 
 %div
-  %a{:href => "http://www.jboss.org/security.html"}
-    %img{:alt => "Find a security issue with a JBoss Project or Product? Report it now", :height => "110", :src => "http://static.jboss.org/common/images/securityissue.png", :class => "img-responsive"}/
+  %a{:href => "https://www.jboss.org/security.html"}
+    %img{:alt => "Find a security issue with a JBoss Project or Product? Report it now", :height => "110", :src => "https://static.jboss.org/common/images/securityissue.png", :class => "img-responsive"}/
