--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -16,20 +16,20 @@ title: Community
       IRC
     %p
       If you would like to chat with our team in real time, just join us on
-      %a{:href => "http://webchat.freenode.net/?channels=#jbossts"}
+      %a{:href => "https://webchat.freenode.net/?channels=#jbossts"}
         %code #jbossts
       IRC channel on
-      %a{:href => "http://freenode.net"}
+      %a{:href => "https://freenode.net"}
         Freenode.
       Please ping one of the dev team (username mention or PM) for attention such as tomjenkinson, mmusgrov, zhfeng, ochaloup.
-    %a{:href => "http://webchat.freenode.net/?channels=jbossts", :class => "btn btn-primary"}
+    %a{:href => "https://webchat.freenode.net/?channels=jbossts", :class => "btn btn-primary"}
       Chat With Us
   .col-md-4
     %h1
       Blog
     %p
       All the latest Narayana project news and other interesting stuff is published in our blog.
-    %a{:href => "http://jbossts.blogspot.co.uk", :class => "btn btn-primary"}
+    %a{:href => "https://jbossts.blogspot.co.uk", :class => "btn btn-primary"}
       Visit Narayana Blog
 
 .row
@@ -46,8 +46,8 @@ title: Community
           Narayana project announcements.
           %p
             The archive is available at
-            %a{:href => "http://lists.jboss.org/pipermail/jbossts-announce/"}
-              http://lists.jboss.org/pipermail/jbossts-announce/
+            %a{:href => "https://lists.jboss.org/pipermail/jbossts-announce/"}
+              https://lists.jboss.org/pipermail/jbossts-announce/
 .row
   %h1 Social
   .col-md-6
