--- a/governance/index.html.haml
+++ b/governance/index.html.haml
@@ -21,7 +21,7 @@ title: Governance
         The project lead will then publish the roadmap on the developers mailing list, and update the version information in JIRA.
       %p
         Narayana is part of the commercial (yet open source)
-        %a{:href => "http://www.redhat.com/products/jbossenterprisemiddleware/application-platform/"} JBoss Enterprise Application Platform
+        %a{:href => "https://www.redhat.com/products/jbossenterprisemiddleware/application-platform/"} JBoss Enterprise Application Platform
         product, so many requirements for Narayana come from its users. However, all requirements are fed into the same community process that our community users follow. We create JIRAs for all
         feature requests on our schedule.
       %p
@@ -29,7 +29,7 @@ title: Governance
         %a{:href => "https://www.jboss.org/products/eap.html"} JBoss.ORG website.
       %p
         The best way for you to suggest requirements for a future release of Narayana is to enter a feature request in
-        %a{:href=>"http://issues.jboss.org/browse/JBTM"} JIRA.
+        %a{:href=>"https://issues.jboss.org/browse/JBTM"} JIRA.
         Lobbying for features using the voting feature in JIRA, and posting to the community forums, is a great way to express interest as well. Although, contributing is the single most expedient way to get a capability into a particular release.
       %h3 Release Cycle
       %p
