--- a/downloads-other/index.html.haml
+++ b/downloads-other/index.html.haml
@@ -15,7 +15,7 @@ title: Legacy Narayana Versions
       %td 2014-12-23
       %td LGPL
       %td
-        %a{:href => "http://www.jboss.org/jbosstm/downloads/4.17.27.Final/binary/jbossts-full-4.17.27.Final.zip"}
+        %a{:href => "https://www.jboss.org/jbosstm/downloads/4.17.27.Final/binary/jbossts-full-4.17.27.Final.zip"}
           %i.icon-download-alt
           Narayana 4.17.27.Final Binary
       %tr
@@ -23,7 +23,7 @@ title: Legacy Narayana Versions
         %td
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.17.27.Final/src/jbossts-full-4.17.27.Final-src.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.17.27.Final/src/jbossts-full-4.17.27.Final-src.zip"}
             %i.icon-download-alt
             Narayana 4.17.27.Final Source Code
       %tr
@@ -31,7 +31,7 @@ title: Legacy Narayana Versions
         %td 2012-10-02
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.16.6.Final/binary/jbossts-full-4.16.6.Final.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.16.6.Final/binary/jbossts-full-4.16.6.Final.zip"}
             %i.icon-download-alt
             Narayana 4.16.6.Final Binary
       %tr
@@ -39,7 +39,7 @@ title: Legacy Narayana Versions
         %td
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.16.6.Final/src/jbossts-full-4.16.6.Final-src.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.16.6.Final/src/jbossts-full-4.16.6.Final-src.zip"}
             %i.icon-download-alt
             Narayana 4.16.6.Final Source Code
       %tr
@@ -47,7 +47,7 @@ title: Legacy Narayana Versions
         %td 2011-04-26
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.15.0.Final/binary/jbossts-full-4.15.0.Final.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.15.0.Final/binary/jbossts-full-4.15.0.Final.zip"}
             %i.icon-download-alt
             Narayana 4.15.0.Final Binary
       %tr
@@ -55,7 +55,7 @@ title: Legacy Narayana Versions
         %td
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.15.0.Final/src/jbossts-full-4.15.0.Final-src.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.15.0.Final/src/jbossts-full-4.15.0.Final-src.zip"}
             %i.icon-download-alt
             Narayana 4.15.0.Final Source Code
       %tr
@@ -63,7 +63,7 @@ title: Legacy Narayana Versions
         %td 2010-10-06
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.13.1.Final/binary/jbossts-full-4.13.1.Final.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.13.1.Final/binary/jbossts-full-4.13.1.Final.zip"}
             %i.icon-download-alt
             Narayana 4.13.1.Final Binary
       %tr
@@ -71,7 +71,7 @@ title: Legacy Narayana Versions
         %td
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.13.1.Final/src/jbossts-full-4.13.1.Final-src.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.13.1.Final/src/jbossts-full-4.13.1.Final-src.zip"}
             %i.icon-download-alt
             Narayana 4.13.1.Final Source Code
       %tr
@@ -79,7 +79,7 @@ title: Legacy Narayana Versions
         %td 2010-05-14
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.11.0.Final/binary/jbossts-full-4.11.0.Final.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.11.0.Final/binary/jbossts-full-4.11.0.Final.zip"}
             %i.icon-download-alt
             Narayana 4.11.0.Final Binary
       %tr
@@ -87,7 +87,7 @@ title: Legacy Narayana Versions
         %td
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.11.0.Final/src/jbossts-full-4.11.0.Final-src.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.11.0.Final/src/jbossts-full-4.11.0.Final-src.zip"}
             %i.icon-download-alt
             Narayana 4.11.0.Final Source Code
       %tr
@@ -95,7 +95,7 @@ title: Legacy Narayana Versions
         %td 2009-12-14
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.9.0.GA/binary/jbossts-full-4.9.0.GA.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.9.0.GA/binary/jbossts-full-4.9.0.GA.zip"}
             %i.icon-download-alt
             Narayana 4.9.0.GA Binary
       %tr
@@ -103,7 +103,7 @@ title: Legacy Narayana Versions
         %td
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.9.0.GA/src/jbossts-full-4.9.0.GA-src.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.9.0.GA/src/jbossts-full-4.9.0.GA-src.zip"}
             %i.icon-download-alt
             Narayana 4.9.0.GA Source Code
       %tr
@@ -111,7 +111,7 @@ title: Legacy Narayana Versions
         %td Wed Oct 07 11:20:06 EDT 2009
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.8.0.GA/binary/jbossts-full-4.8.0.GA.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.8.0.GA/binary/jbossts-full-4.8.0.GA.zip"}
             %i.icon-download-alt
             Narayana 4.8.0.GA Binary
       %tr
@@ -119,7 +119,7 @@ title: Legacy Narayana Versions
         %td
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.8.0.GA/src/jbossts-full-4.8.0.GA-src.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.8.0.GA/src/jbossts-full-4.8.0.GA-src.zip"}
             %i.icon-download-alt
             Narayana 4.8.0.GA Source Code
       %tr
@@ -127,7 +127,7 @@ title: Legacy Narayana Versions
         %td Mon Jun 29 15:47:24 EDT 2009
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.7.0.GA/binary/jbossts-full-4.7.0.GA.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.7.0.GA/binary/jbossts-full-4.7.0.GA.zip"}
             %i.icon-download-alt
             Narayana 4.7.0.GA Binary
       %tr
@@ -135,7 +135,7 @@ title: Legacy Narayana Versions
         %td
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.7.0.GA/src/jbossts-full-4.7.0.GA-src.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.7.0.GA/src/jbossts-full-4.7.0.GA-src.zip"}
             %i.icon-download-alt
             Narayana 4.7.0.GA Source Code
       %tr
@@ -143,7 +143,7 @@ title: Legacy Narayana Versions
         %td Mon Jun 29 15:47:24 EDT 2009
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.6.1.GA/binary/jbossts-full-4.6.1.GA.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.6.1.GA/binary/jbossts-full-4.6.1.GA.zip"}
             %i.icon-download-alt
             Narayana 4.6.1.GA Binary
       %tr
@@ -151,7 +151,7 @@ title: Legacy Narayana Versions
         %td
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.6.1.GA/src/jbossts-full-4.6.1.GA-src.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.6.1.GA/src/jbossts-full-4.6.1.GA-src.zip"}
             %i.icon-download-alt
             Narayana 4.6.1.GA Source Code
       %tr
@@ -159,7 +159,7 @@ title: Legacy Narayana Versions
         %td Mon Jun 29 15:46:09 EDT 2009
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.5.0.GA/binary/jbossts-full-4.5.0.GA.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.5.0.GA/binary/jbossts-full-4.5.0.GA.zip"}
             %i.icon-download-alt
             Narayana 4.5.0.GA Binary
       %tr
@@ -167,7 +167,7 @@ title: Legacy Narayana Versions
         %td
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.5.0.GA/src/jbossts-full-4.5.0.GA-src.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.5.0.GA/src/jbossts-full-4.5.0.GA-src.zip"}
             %i.icon-download-alt
             Narayana 4.5.0.GA Source Code
       %tr
@@ -175,7 +175,7 @@ title: Legacy Narayana Versions
         %td Mon Jun 29 15:45:16 EDT 2009
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.4.0.CR1/binary/jbossts-full-4.4.0.CR1.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.4.0.CR1/binary/jbossts-full-4.4.0.CR1.zip"}
             %i.icon-download-alt
             Narayana 4.4.0.CR1 Binary
       %tr
@@ -183,7 +183,7 @@ title: Legacy Narayana Versions
         %td
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.4.0.CR1/src/jbossts-full-4.4.0.CR1-src.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.4.0.CR1/src/jbossts-full-4.4.0.CR1-src.zip"}
             %i.icon-download-alt
             Narayana 4.4.0.CR1 Source Code
       %tr
@@ -191,7 +191,7 @@ title: Legacy Narayana Versions
         %td Mon Jun 29 15:45:16 EDT 2009
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.3.GA/binary/jbossts-full-4.3.GA.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.3.GA/binary/jbossts-full-4.3.GA.zip"}
             %i.icon-download-alt
             Narayana 4.3.GA Binary
       %tr
@@ -199,7 +199,7 @@ title: Legacy Narayana Versions
         %td
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.3.GA/src/jbossts-full-4.3.GA-src.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.3.GA/src/jbossts-full-4.3.GA-src.zip"}
             %i.icon-download-alt
             Narayana 4.3.GA Source Code
       %tr
@@ -207,7 +207,7 @@ title: Legacy Narayana Versions
         %td Mon Jun 29 15:51:42 EDT 2009
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.2.3.SP7/binary/jbossts-full-4.2.3.SP7.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.2.3.SP7/binary/jbossts-full-4.2.3.SP7.zip"}
             %i.icon-download-alt
             Narayana 4.2.3.SP7 Binary
       %tr
@@ -215,6 +215,6 @@ title: Legacy Narayana Versions
         %td
         %td LGPL
         %td
-          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.2.3.SP7/src/jbossts-full-4.2.3.SP7-src.zip"}
+          %a{:href => "https://www.jboss.org/jbosstm/downloads/4.2.3.SP7/src/jbossts-full-4.2.3.SP7-src.zip"}
             %i.icon-download-alt
             Narayana 4.2.3.SP7 Source Code
