Added a Content Security Policy

--- a/_layouts/project.html.haml
+++ b/_layouts/project.html.haml
@@ -6,6 +6,7 @@
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
     %meta(name="description" content="#{page.description}")
     %meta(name="author" content="#{page.author}")
+    %meta{'http-equiv' => 'Content-Security-Policy', :content => 'default-src https: \'unsafe-eval\' \'unsafe-inline\'; object-src \'none\''}/
 
     - pageStyle = page.style ;
 
