--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -21,7 +21,7 @@ title: Community
       IRC channel on
       %a{:href => "https://freenode.net"}
         Freenode.
-      Please ping one of the dev team (username mention or PM) for attention such as tomjenkinson, mmusgrov, zhfeng, ochaloup.
+      Please ping one of the dev team (username mention or PM) for attention such as tomjenkinson, mmusgrov, ochaloup.
     %a{:href => "https://webchat.freenode.net/?channels=jbossts", :class => "btn btn-primary"}
       Chat With Us
   .col-md-4
@@ -97,15 +97,6 @@ title: Community
       His latest interests include how to apply these experiences in a REST setting.
   .col-md-6
     %h2
-      Amos Feng
-    %p
-      我在Redhat工作，参与Narayana项目的开发
-    .div{:style => "height: 250px"}
-      %a{:class => "twitter-timeline", :href => "https://twitter.com/blacktie_china", :"data-widget-id" => "532503585267777536", :height => "250"}
-
-.row
-  .col-md-6
-    %h2
       Ondra Chaloupka
     %p
       I joined the team with 5 years experience of QE engineer for JBoss EAP.
@@ -120,6 +111,7 @@ title: Community
       Other contributors:
     %ul
       %li Jonathan Halliday
+      %li Amos Feng
       %li Gytis Trikleris
       %li Paul Robinson
       %li Andrew Dinn
