add link to new google groups forum

--- a/community/index.html.haml
+++ b/community/index.html.haml
@@ -9,7 +9,7 @@ title: Community
       Forum
     %p
       Narayana user forum is the best place to ask any project related questions, give suggestions, or request a new feature.
-    %a{:href => "https://developer.jboss.org/en/jbosstm/?view=discussions", :class => "btn btn-primary"}
+    %a{:href => "https://groups.google.com/forum/#!forum/narayana-users", :class => "btn btn-primary"}
       Visit Narayana Forum
   .col-md-4
     %h1
